--- a/styles.css
+++ b/styles.css
@@ -127,16 +127,20 @@
     margin: 4px 0;
 }
 
+.body-measurement-entry::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 /* Hide the original task marker */
 .body-measurement-entry .task-list-item-checkbox {
     display: none;
-}
-
-/* Base styles for measurement entries */
-.markdown-preview-view ul>li.task-list-item {
-    margin: 4px 0;
-}
-
-.markdown-preview-view ul>li.task-list-item input.task-list-item-checkbox {
-    display: none !important;
 }
